Finalisation du TP (ajout du fichier -BDD- du DNS simulé, débogages et modifications des fonctions de la classe DNS et ajout du menu)